--- a/2장객체의생성과파괴/[아이템1]생성자_대신_정정_팩터리_메서드를_고려하라.md
+++ b/2장객체의생성과파괴/[아이템1]생성자_대신_정정_팩터리_메서드를_고려하라.md
@@ -1,1 +1,28 @@
+<h1> 생성자 대신 정적 팩터리 메서드를 고려하라 </h1> 
+
+<br><br> 
+<b> 클래스는 생성자와 별도로 정적 팩터리 메서드 (static factory method) 를 제공할 수 있다.</b>
+
+https://velog.io/@cjh8746/정적-팩토리-메서드Static-Factory-Method <br> 
+정적 팩토리 메서드 관련 참고글 <br>
+
+정적팩토리 메서드란 객체 생성의 역할을 하는 클래스 메서드라는 의미 <br> 
+
+클래스는 클라이언트에 public 생성자 대신 정적 팩터리 메서드를 제공할 수 있다. <br> 
+
+<h1>정적 팩터리 메서드의 장점 </h1>
+<h3> 첫번째 이름을 가질 수 있다. </h3>
+
+생성자에 넘기는 매개변수와 생성자 자체만으로는 반환될 객체의 특성을 제대로 설명하지 못한다.<br> 
+생성자인 BigInteger(int, int, Random)보다 정적 팩터리 메서드인 <br> 
+BigInteger.probablbPrime 중 소수인 BigInteger를 반환한다는 의미를 잘 설명한다.<br> 
+
+<br><br> 
+하나의 시그니처로는 생성자를 하나만 만들 수 있다. <br> 
+입력 매개변수를의 순서를 다르게 한 생성자를 새로 추가하는 식으로 이 제한을 피해볼 수도 있지만 좋은 발상이 아니다.<br> 
+가독성이 매우 저해된다. <br> 
+
+* 자바 프로그래밍에서 시그니처란 메서드명과 파라미터의 순서, 타입, 개수를 의미한다. 
+* 리턴타입과 exception은 메서드 시그니처가 아니다. 
+ <br><br> 
 
