--- a/2장객체의생성과파괴/[아이템2]생성자에_매개변수가_많다면_빌더를_고려하라.md
+++ b/2장객체의생성과파괴/[아이템2]생성자에_매개변수가_많다면_빌더를_고려하라.md
@@ -2,3 +2,22 @@
 <br> <br> 
 <h3>자바빈즈 패턴</h3>
 자바빈즈 패턴에서는 객체 하나를 만들려면 메서드를 여러 개 호출해야 하고, 객체가 완전히 생성되기 전까지는 일관성이 무너진 상태에 놓이게 된다. <br> 
+
+<h2> Object freeze() </h2>  <br> 
+객체 타입인 값에 freeze()를 사용하면 값을 변경할 수 없는 (immutable)값으로 바꿀 수 있다.  <br> 
+상수(constant)처럼 변경할 수 없는 값이 된다. 값을 바꿀 수도 삭제할 수도 없다. <br> 
+<br> 
+const로 선언된 객체의 값이라도 내부 프로퍼티 및 메소드의 값을 변경할 수 있다. <br> 
+하지만 freeze()를 사용할 경우 이런 참조 값의 내부 프로퍼티, 메소드도 값 변경이 불가능하게 된다. <br> 
+const만 사용하여 선언된 객체는 변경되나 freeze()를 사용한 경우 변경할 수 없다. <br> 
+
+<br><br> 
+Builder를 사용하게 되면 잘못된 매개변수를 빠르게 발견할 수 있다. <br> 
+builder 패턴을 사용하면 쓰기 쉽고 읽기 쉬워진다. <br> 
+빌더 패턴은 명명된 선택적 매개변수 (named optional parameters)를 흉내낸 것이다. <br> 
+<br><br> 
+
+* 공변반환 타입
+  부모 클래스의 메소드를 오버라이딩하는 경우, 부모 클래스의 반환 타입은 자식 클래스의 타입으로 변경이 가능하다. <br> <br> 
+이 기능을 이용하면 형변환에 신경쓰지 않고 빌더를 사용할 수 있다. <br>
+<br> 빌더 패턴은 상당히 유연하다. 애초에 빌더 패턴으로 시작하는 게 나음 <br>
