--- a/2장객체의생성과파괴/[아이템5]자원을_직접_명시하지_말고_의존_객체_주입을 사용하라.md
+++ b/2장객체의생성과파괴/[아이템5]자원을_직접_명시하지_말고_의존_객체_주입을 사용하라.md
@@ -41,5 +41,24 @@ ex) 맞춤법 검사기는 사전에 의존하는데, 이런 클래스는 정적
 <h3> => 인스턴스를 생성할 때 생성자에 필요한 자원을 넘겨주는 방식 </h3>
 
 <br> 
-이는 
+이는 의존 객체 주입의 한 형태로, 맞춤법 검사기를 생성할 때 의존 객체인 사전을 주입해주면 된다. <br>  
+
+```java
+public Class SpellChecker {
+  private final Lexicon dictionary;
+
+  public SpellChecker(Lexicon dictionary) {
+    this.dictionary = Objects.requireNonNull(dictionary);
+  }
+  public boolean isValid(String word) {...}
+  public List<String> suggestions(String typo) {...}
+}
+```
 <br> 
+의존 객체 주입 패턴은 아주 단순하여 수많은 프로그래머가 이 빙식에 이름이 있다는 사실도 모른 채 사용한다. <br> 
+불변을 보장하여 (같은 자원을 사용하려는) 여러 클라이언트가 의존 객체들을 안심하고 공유할 수 있기도 한다. <br> 
+불변 관련 참고 자료 <br> 
+https://javabom.tistory.com/19 <br> 
+<br> 
+
+
