--- a/2장객체의생성과파괴/[아이템5]자원을_직접_명시하지_말고_의존_객체_주입을 사용하라.md
+++ b/2장객체의생성과파괴/[아이템5]자원을_직접_명시하지_말고_의존_객체_주입을 사용하라.md
@@ -60,5 +60,16 @@ public Class SpellChecker {
 불변 관련 참고 자료 <br> 
 https://javabom.tistory.com/19 <br> 
 <br> 
+의존 객체 주입은 생성자, 정적 팩터리, 빌더 모두에 똑같이 응용할 수 있다. <br> 
+* 팩터리란 호출할 때마다 특정 타입의 인스턴스를 반복해서 만들어주는 객체를 말한다. <br> 
+=> 팩터리 메서드 패턴을 것이다.  <br> 
+자바 8에서 소개한 Supplier<T> 인터페이스가 팩터리를 표현한 완벽한 예이다. <br> 
 
+<br> 
+의존 객체 주입이 유연성과 테스트 용이성을 개선해주긴 하지만, 의존성이 수천개나 되는 큰 프로젝트에서는 코드를 어지럽게 만들기도 한다. <br> 
 
+<h3> 핵심 정리 </h3>
+1. 클래스가 내부적으로 하나 이상의 자원에 의존하고, 그 자원이 클래스 동작에 영향을 준다면 싱글턴과 정적 유틸리티 클래스는 사용하지 않는 것이 좋다.  <br> 
+2. 자원들을 클래스가 직접 만들게 해서도 안된다.  <br> 
+3. 필요한 자원을 생성자 (혹은 정적 팩터리나 빌더에) 넘겨주자. <br> 
+4. 의존 객체 주입이라 하는 이 기법은 클래스의 유연성, 재사용성, 테스트 용이성을 개선해준다. <br> 
