--- a/2장객체의생성과파괴/[아이템6]불필요한_객체생성을_피하라.md
+++ b/2장객체의생성과파괴/[아이템6]불필요한_객체생성을_피하라.md
@@ -8,7 +8,6 @@ String s = new String("bikini"); // 따라하지 말것!
 이 문장이 실행될 때마다 String 인스턴스를 새로 만든다. => 불필요한 행위 <br> 
 생성자에 넘겨진 "bikini" 자체가 이 생성자로 만들어내려는 String과 기능적으로 완전히 똑같다. <br> 
 이 문장이 반복문이나 빈번히 호출되는 메서드 안에 있다면 쓸데없는 String 인스턴스가 수백만 개 만들어질 수 있다. <br> 
-<hr> 
 
 ```java
 String s = "bikini"; // 개선된 버전
@@ -20,3 +19,65 @@ String s = "bikini"; // 개선된 버전
 <br> 
 생성자 대신 정적 팩터리 메서드를 제공하는 불변 클래스에서는 정적 팩터리 메서드를 사용해 불필요한 객체 생성을 피할 수 있다. <br> 
 Boolean 생성자 대신 Boolean.valueOf 팩터리 메서드를 사용하는 것이 좋다 <br> 
+생성자는 호출할 때마다 새로운 객체를 만들지만, 팩터리 메서드는 전혀 그렇지 않다. <br> 
+불변 객체만이 아니라 가변 객체라 해도 사용 중에 변경되지 않을 것임을 안다면 재사용할 수 있다. <br> 
+생성 비용이 아주 비싼 객체도 있다. 이런 객체를 반복해서 필요하다면 캐싱해서 재사용해야 한다. <br> 
+
+```java
+static boolean isRomanNumeral(String s) {
+  return s.matches("..."); //정규식
+}
+```
+String.matches는 정규표현식으로 문자열 형태를 확인하는 가장 쉬운 방법이지만, 성능이 중요한 상황에서 반복해 사용하기엔 적합하지 않다. <br> 
+이 메서드가 내부에서 만드는 정규표현식용 Pattern 인스턴스는, 한 번 쓰고 버려져서 곧바로 가비지 컬렉션 대상이 된다. <br> 
+Pattern은 입력받은 정규표현식에 해당하는 유한 상태 머신을 만들기 때문에 인스턴스 생성 비용이 높다. <br> 
+
+<hr> 
+성능을 개선하려면 필요한 정규표현식을 표현하는 Pattern 인스턴스를 클래스 초기화 과정에서 직접 생성해 캐싱해두고  <br> 
+나중에 isRomanNumeral 메서드가 호출될때마다 이 인스턴스를 재사용한다. <br> 
+
+```java
+public Class RomanNumerals {
+  private static final Pattern ROMAN = Pattern.compile("..."); //정규식
+
+  static boolean isRomanNumeral(String s) {
+    return ROMAN.matcher(s).matches();
+  }
+}
+
+```
+<br> 
+이렇게 개선하면 isRomanNumeral이 빈번히 호출되는 상황에서 성능을 상당히 끌어올릴 수 있다. <br> 
+개선된 isRomanNumeral 방식의 클래스가 초기화된 후 이 메서드를 한 번도 호출하지 않는다면 ROMAN 필드는 쓸데없이 초기화된 꼴이다. <br> 
+지연초기화로 불필요한 초기화를 없앨 수 있지만, 권하지 않는다.<br> 
+지연초기화는 코드를 복잡하게 만드는데, 성능은 크게 개선되지 않을 때가 많기 때문이다. <br> 
+아이템 (83) https://javabom.tistory.com/92 <br> 
+아이템 (67) https://escapefromcoding.tistory.com/233 최적화는 신중히 해라 <br> 
+<hr> 
+객체가 불변이라면 재사용해도 안전함이 명백하다. <br> 
+하지만 훨씬 덜 명확하거나, 심지어 직관에 반대되는 상황도 있다. <br> 
+* ex) Adaptor <br> 
+Map 인터페이스의 keySet 메서드는 Map 객체 안의 키 전부를 담은 Set 뷰를 반환한다. <br> 
+keySet을 호출할 때마다 새로운 Set 인스턴스가 만들어지리라고 생각할 수도 있지만, 사실은 매번 같은 Set 인스턴스를 반환할지도 모른다. <br> 
+반환된 Set 인스턴스가 일반적으로 가변이더라도 반환된 인스턴스들은 기능적으로 모두 똑같다. <br> 
+즉, 반환한 객체 중 하나를 수정하면 다른 모든 객체가 따라서 바뀐다. <br> 
+모두가 똑같은 Map 인스턴스를 대변하기 때문이다. <br> 
+<hr> 
+<br><br> 
+불필요한 객체를 만들어내는 또 다른 예는 오토박싱이다. <br> 
+* ex) auto boxing <br> 
+프로그래머가 기본 타입과 박싱된 기본 타입을 섞어 쓸 때 자동으로 상호 변환해주는 기술이다. <br> 
+오토박싱은 기본 타입과 그에 대응하는 박싱된 기본 타입의 구분을 흐려주지만, 완전히 없애주는 것은 아니다. <br>  
+
+```java
+private static long sum() {
+  Long sum = 0L;
+  for(long i = 0; i <= Integer.MAX_VALUE; i++) {
+    sum += i;
+  }
+  return sum;
+}
+```
+제대로 구현했을 때보다 훨씬 느리다. sum 변수를 long이 아닌 Long으로 선언해서 불필요한 Long 인스턴스가 약 231개나 만들어진 것이다. <br> 
+박싱된 기본 타입보다는 기본 타입을 사용하고, 의도치 않은 오토박싱이 숨어들지 않도록 주의하자. <br> 
+<br> 
