--- a/2장객체의생성과파괴/[아이템6]불필요한_객체생성을_피하라.md
+++ b/2장객체의생성과파괴/[아이템6]불필요한_객체생성을_피하라.md
@@ -81,3 +81,9 @@ private static long sum() {
 제대로 구현했을 때보다 훨씬 느리다. sum 변수를 long이 아닌 Long으로 선언해서 불필요한 Long 인스턴스가 약 231개나 만들어진 것이다. <br> 
 박싱된 기본 타입보다는 기본 타입을 사용하고, 의도치 않은 오토박싱이 숨어들지 않도록 주의하자. <br> 
 <br> 
+<hr> 
+객체 생성은 비싸니 피해야 한다로 오해하면 안된다. <br> 
+프로그램의 명확성,  간결성, 기능을 위해서 객체를 추가로 생성하는 것은 좋은 일이다. <br> 
+아주 무거운 객체가 아니고서야 단순히 객체 생성을 피하고자 자기만의 객체 풀을 만들면 안된다. <br> 
+자체 객체 풀은 코드를 헷갈리게 만들고 메모리 사용량을 늘리고 성능을 떨어트린다. <br> 
+
