--- a/2장객체의생성과파괴/[아이템7]다쓴_객체_참조를_해제하라.md
+++ b/2장객체의생성과파괴/[아이템7]다쓴_객체_참조를_해제하라.md
@@ -32,3 +32,51 @@ public class Stack {
   }
 }
 ```
+메모리 누수로 이 스택을 사용하는 프로그램을 오래 실행하다 보면 점차 가비지 컬렉션 활동과 메모리 사용량이 늘어나 결국 성능이 저하될 것이다. <br> 
+심할 때는 디스크 페이징이나 OutOfMemoryError를 일으켜 프로그램이 예기치 않게 종료되기도 한다. <br> 
+위 코드에서 스택이 커졌다가 줄어들 때 스택에서 꺼내진 객체들을 가비지 컬렉터가 회수하지 않는다. <br> 
+프로그램에서 그 객체들을 더 이상 사용하지 않더라도 스택이 그 객체들의 다 쓴 참조를 여전히 가지고 있기 때문이디. <br> <br>  
+여기서 다 쓴 참조란 앞으로 다시 쓰지 않을 참조를 뜻한다. <br> 
+elements 배열의 '활성 영역' 밖의 참조들이 모두 여기에 해당된다. <br> 
+활성영역은 인덱스가 size보다 작은 원소들로 구성된다. <br> 
+<br> 
+<br> 
+가비지 컬렉션 언어에서는 메모리 누수를 찾기가 아주 까다롭다. <br> 
+객체 참조 하나를 살려두면 가비지 컬렉터는 그 객체 뿐 아니라 그 객체가 참조하는 모든 객체를 회수해가지 못한다. <br> 
+<h2>해법은 간단하다. 해당 참조를 다 썼을 때 null처리 하면 된다. </h2> 
+<br> 
+제대로 구현한 pop 메서드 <br> 
+
+```java
+public Object pop() {
+  if(size==0) 
+    throw new EmptyStackException();
+  Object result = elements[--size];
+  elements[size] = null; //다 쓴 참조 해제
+  return result;
+}
+```
+<br> 
+모든 객체를 다 쓰자마자 일일이 null 처리하는 것은 바람직하지 않다. <br> 
+프로그램을 필요 이상으로 지저분하게 만들 뿐이다. <br> 
+객체 참조를 null 처리하는 일은 예외적인 경우여야 한다. <br> 
+다 쓴 참조를 해제하는 가장 좋은 방법은 그 참조를 담은 변수를 유효 범위 밖으로 밀어내는 것이다. <br> 
+* 참고 [아이템 57] https://incheol-jung.gitbook.io/docs/study/effective-java/undefined-7/undefined <br> 
+<br> 
+Stack 클래스가 메모리 누수에 취약한 이유는 객체 자체가 아니라 객체 참조를 담는 elements 배열로 저장소 풀을 만들어 원소를 관리하기 때문 <br> 
+<h2>일반적으로 자기 메모리를 직접 관리하는 클래스라면 프로그래머는 항시 메모리 누수에 주의해야 한다.</h2>
+<br> 
+원소를 다 사용한 즉시 그 원소가 참조한 객체들을 다 null 처리해 줘야 한다. <br> 
+<hr>
+<h3> 캐시 역시 메모리 누수를 일으키는 주범이다. </h3>
+<br> 
+객체 참조를 캐시에 넣고 나서, 이 사실을 까맣게 잊을 채 그 객체를 다 쓴 뒤로도 한참을 그냥 놔두는 일을 자주 접할 수 있다. <br> 
+캐시 외부에서 키를 참조하는 동안만 엔트리가 살아 있는 캐시가 필요한 상황이라면 WeakHashMap을 사용해 캐시를 만들자. <br> 
+다 쓴 엔트리는 그 즉시 자동으로 제거될 것이다. <br> 
+* 참고 weakHashMap https://dejavuhyo.github.io/posts/java-weakhashmap/ <br> 
+
+하지만 캐시를 만들 때 보통은 캐시 앤트리의 유효기간을 정확히 정의하기 어렵기 때믄에 <br> 
+시간이 지날 수록 엔트리의 가치를 떨어트리는 방식을 흔히 사용한다. <br> 
+<br><br> 
+이런 방식에서는 쓰지 않는 엔트릴를 이따금 청소해줘야 한다. ex) ScheduledThreadPoolExecutor <br> 
+백그라운드 스레드를 활용하거나 캐시에 새 엔트리를 추가할 때 부수 작업으로 수행하는 방법 <br> 
